--- a/src/Flame.Clr.nuspec
+++ b/src/Flame.Clr.nuspec
@@ -11,7 +11,7 @@
     <!--<iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>-->
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <summary>A CIL front-end and back-end for Flame.</summary>
-    <description>Flame is a collection of modular, open-source .NET libraries that can be leveraged to build a compiler.
+    <description>Flame is a collection of C# libraries for building tools that read, analyze, optimize and write managed languages.
 
     This package contains a Common Intermediate Representation (CIL) front-end and back-end for Flame. It allows you to build Flame-based tools that consume and/or produce CIL.</description>
     <releaseNotes></releaseNotes>
