--- a/appveyor.yml
+++ b/appveyor.yml
@@ -51,6 +51,8 @@ build_script:
 after_build:
   # Create NuGet packages
   - nuget pack -Version %PKG_VERSION% src/Flame.nuspec
+  - nuget pack -Version %PKG_VERSION% src/Flame.Clr.nuspec
+  - nuget pack -Version %PKG_VERSION% src/Flame.Ir.nuspec
 
   # Build docs using DocFX and deploy them to GitHub pages. (Based on https://github.com/docascode/docfx-seed/blob/master/appveyor.yml)
   - ps: |
