--- a/src/UnitTests/UnitTests.csproj
+++ b/src/UnitTests/UnitTests.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -29,17 +29,20 @@
     <Externalconsole>true</Externalconsole>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Pixie, Version=0.1.6.128, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Pixie.0.1.6\lib\net45\Pixie.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Pixie.Loyc, Version=0.1.6.128, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Pixie.Loyc.0.1.6\lib\net45\Pixie.Loyc.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Pixie.Terminal, Version=0.1.6.128, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Pixie.0.1.6\lib\net45\Pixie.Terminal.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Numerics" />
-    <Reference Include="Pixie">
-      <HintPath>..\packages\Pixie.0.1.5\lib\net45\Pixie.dll</HintPath>
-    </Reference>
-    <Reference Include="Pixie.Terminal">
-      <HintPath>..\packages\Pixie.0.1.5\lib\net45\Pixie.Terminal.dll</HintPath>
-    </Reference>
-    <Reference Include="Pixie.Loyc">
-      <HintPath>..\packages\Pixie.Loyc.0.1.5\lib\net45\Pixie.Loyc.dll</HintPath>
-    </Reference>
     <Reference Include="System.Collections.Immutable">
       <HintPath>..\packages\System.Collections.Immutable.1.5.0\lib\portable-net45+win8+wp8+wpa81\System.Collections.Immutable.dll</HintPath>
     </Reference>
@@ -115,6 +118,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -147,11 +151,5 @@
       <Name>Brainfuck</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Flame\" />
-    <Folder Include="Flame.Ir\" />
-    <Folder Include="Flame.Clr\" />
-    <Folder Include="Tools\" />
-    <Folder Include="Macros\" />
-  </ItemGroup>
+  <ItemGroup />
 </Project>
